# MiniML-Library-Gruppennummer-854

./: CMakeLists.txt  README.md
Data/: IrisProjection.txt
Examples/: DataframeOperationsExample.cpp  PcaExample.cpp  ScalingAndStatisticsExample.cpp
Test/: CMakeLists.txt  CastingHelperTests.cpp  DataFrameTests.cpp  DescriptiveStatisticsTests.cpp  PCATests.cpp  StandardScalerTests.cpp
include/: CastingHelper.hpp  Column.hpp  CsvHandler.hpp  DataFrame.hpp  DescriptiveStatistics.hpp  LinAlgOps.hpp  PCA.hpp  StandardScaler.hpp
src/: CastingHelper.cpp  CsvHandler.cpp  DataFrame.cpp  DescriptiveStatistics.cpp  LinAlgOps.cpp  PCA.cpp  StandardScaler.cpp
